@@ -113,6 +113,7 @@ Problem47:
 Problem48:
 Problem49:
 Problem50:
+Problem52:
 Problem56:
 Problem57:
 Problem63:
