@@ -62,8 +62,17 @@ C by clear margins.
 <P>
 
 <LI>
-<A href="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/trunk/doc/EXAMPLE/ProjectEuler">PE</A>
-contains some solutions to a set of mathematical problems posted at <A href="http://ProjectEuler.net">ProjectEuler</A>.
+<A
+href="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/trunk/doc/EXAMPLE/ProjectEuler">PE</A>
+contains some solutions to a set of mathematical problems posted at <A
+href="http://ProjectEuler.net">ProjectEuler</A>.
+<P>
+While there are many solutions to these problems that are already available
+on-line, you can find here something of great distinction: Many solutions
+implemented in ATS are fully verified, that is, formal proofs are provided
+to attest to the correctness of these solutions. This is a style that makes
+ATS unique in its approach to facilitating the construction of correct
+programs.
 <P>
 </MENU>
 
