@@ -1,4 +1,20 @@
-all:: ATS tutorial example implementation resource library paper changelog
+######
+#
+# A simple Makefile for updating various ATS docs
+#
+######
+
+all:: \
+  ATS \
+  TUTORIAL \
+  EXAMPLE EXAMPLES_new \
+  IMPLEMENTATION \
+  RESOURCE \
+  LIBRARY \
+  PAPER \
+  CHANGELOG
+
+######
 
 ATS::
 	scp ATS.html \
@@ -8,35 +24,35 @@ FAQ::
 	scp FAQ.txt \
           ats-hwxi@web.sourceforge.net:/home/groups/a/at/ats-lang/htdocs/FAQ.txt
 
-tutorial::
+TUTORIAL::
 	scp TUTORIAL/tutorial.html \
           ats-hwxi@web.sourceforge.net:/home/groups/a/at/ats-lang/htdocs/TUTORIAL/tutorial.html
 
-example::
+EXAMPLE::
 	scp EXAMPLE/example.html \
           ats-hwxi@web.sourceforge.net:/home/groups/a/at/ats-lang/htdocs/EXAMPLE/example.html
 
-example_new::
+EXAMPLE_new::
 	scp EXAMPLE/example_new.html \
           ats-hwxi@web.sourceforge.net:/home/groups/a/at/ats-lang/htdocs/EXAMPLE/example_new.html
 
-implementation::
+IMPLEMENTATION::
 	scp IMPLEMENTATION/implementation.html \
           ats-hwxi@web.sourceforge.net:/home/groups/a/at/ats-lang/htdocs/IMPLEMENTATION/implementation.html
 
-resource::
+RESOURCE::
 	scp RESOURCE/resource.html \
           ats-hwxi@web.sourceforge.net:/home/groups/a/at/ats-lang/htdocs/RESOURCE/resource.html
 
-library::
+LIBRARY::
 	scp LIBRARY/library.html \
           ats-hwxi@web.sourceforge.net:/home/groups/a/at/ats-lang/htdocs/LIBRARY/library.html
 
-paper::
+PAPER::
 	scp PAPER/paper.html \
           ats-hwxi@web.sourceforge.net:/home/groups/a/at/ats-lang/htdocs/PAPER/paper.html
 
-changelog::
+CHANGELOG::
 	scp CHANGELOG/changelog.html \
           ats-hwxi@web.sourceforge.net:/home/groups/a/at/ats-lang/htdocs/CHANGELOG/changelog.html
 
