@@ -3,7 +3,7 @@
 ats-lang-anairiats-0.2.2:
 
 1. -D_ATS_TERMINATION_CHECK is changed to -D_ATS_PROOFCHECK; fixing a
-   related bug in [d3explst_funarg_tr].k
+   related bug in [d3explst_funarg_tr].
 2. Fixing a bug involving type-checking variadic functions
 3. Fixing a bug involving solving top-level constraints
 4. $ATSHOME/libc/SATS/complex.sats and $ATSHOME/libc/DATS/complex.dats
@@ -12,6 +12,9 @@ ats-lang-anairiats-0.2.2:
 6. Thoroughly testing the support for ATS running on Cygwin
 7. Implementing libats/vector (dynamically resizable vectors)
 8. $ATSHOME may now contain the space character (' ').
+9. Fixing a bug involving mishandling of proofs during proof erasure
+   (ats_trans4)
+10. Fixing a bug involving mishandling negative long integers
 
 ########################################################################
 
